Few more changes to the database, and fixed up readme.

--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
             width:175px;
             height:175px;
             background-size: cover;
+            /* background-position: center; */
             border:2px solid gray;
             border-left:none;
         }
